# boai

./: README.md
app/lib/hooks/: useSidecar.ts
app/routes/: api.sidecar.ts
scripts/: start-sidebolt.sh
sidebolt/: .env.example  docker-compose.yaml  package.json
sidebolt/app/components/chat/: Chat.client.tsx
sidebolt/sidecar/: rust-toolchain.toml
sidebolt/sidecar/llm_client/src/: broker.rs  lib.rs  provider.rs
sidebolt/sidecar/llm_prompts/src/: lib.rs
sidebolt/sidecar/sidecar/: build.rs  codestory.db
sidecar/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HOW_TO_CONTRIBUTE.md  README.md  SECURITY.md  package_windows_bin.sh  package_windows_zip.sh  reproduce_error.py  update_version.sh
sidecar/.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  idea.yml
sidecar/.github/workflows/: release.yaml
sidecar/llm_client/: Cargo.toml
sidecar/llm_client/src/clients/: anyscaleai.rs  fireworks.rs  lmstudio.rs  mod.rs  openai_compatible.rs
sidecar/llm_client/src/format/: claude.rs
sidecar/llm_client/src/format/tokenizer_config/: codellama.json  mixtral.json
sidecar/llm_client/src/tokenizer/: tokenizer.rs
sidecar/llm_prompts/: Cargo.toml
sidecar/llm_prompts/src/fim/: mod.rs  types.rs
sidecar/llm_prompts/src/in_line_edit/: doc_helpers.rs  mistral.rs
sidecar/llm_prompts/src/reranking/: codellama.rs
sidecar/logging/: Cargo.toml
sidecar/logging/src/: lib.rs  mod.rs  parea.rs
sidecar/sidecar/: Cargo.toml
sidecar/sidecar/.sqlx/: query-44cffc24222af81e1f1840a4d4ff3540f8c35c139ac87b800436d6b2c8e13622.json  query-6130131a3676914fdd208b8bd881556b9c67b0449c51a20480d45f3bce1c6bb4.json  query-72547e044b212649ae39530386126d0409fcf15942eea73fda0c48dd328612bc.json  query-7f63260645b3afdce1c5864bd1d588f455d1e83196274ac7af2fa81fc5815e47.json  query-89e8a76436d3395071a2cf5608804c8a2c7ebc9d73bde890f3a2ff79b2ebf309.json  query-9f862a56e79cc9ae6e9b896064a0057335b40225be0a8c8d29d9227de12ae364.json  query-e38351a13cf68acb87afc8b5c244cfe29dade7112fdd4b68c6105b23168b1970.json  query-ed6379e37c16064198f48dbfb91899d74eb346533e3c9ab3814ba67b68d71f51.json
sidecar/sidecar/migrations/: 20231001175730_tantivy_cache.sql  20231008042845_agent_events.sql  20231120174108_openai_llm_data_answer_column.sql
sidecar/sidecar/src/agent/: llm_funcs.rs  mod.rs  search.rs  types.rs  user_context.rs
sidecar/sidecar/src/agentic/: mod.rs
sidecar/sidecar/src/agentic/memory/: base.rs
sidecar/sidecar/src/agentic/symbol/: anchored.rs  errors.rs  locker.rs  tool_box.rs  ui_event.rs
sidecar/sidecar/src/agentic/symbol/events/: environment_event.rs  input.rs  lsp.rs  types.rs
sidecar/sidecar/src/agentic/tool/: broker.rs  errors.rs  mod.rs  type.rs
sidecar/sidecar/src/agentic/tool/code_edit/: filter_edit.rs  find.rs
sidecar/sidecar/src/agentic/tool/code_symbol/: find_file_for_new_symbol.rs  find_symbols_to_edit_in_context.rs  initial_request_follow.rs  probe_question_for_symbol.rs
sidecar/sidecar/src/agentic/tool/devtools/: screenshot.rs
sidecar/sidecar/src/agentic/tool/file/: file_finder.rs
sidecar/sidecar/src/agentic/tool/filtering/: errors.rs  mod.rs
sidecar/sidecar/src/agentic/tool/filtering/models/: anthropic.rs
sidecar/sidecar/src/agentic/tool/git/: diff_client.rs
sidecar/sidecar/src/agentic/tool/grep/: file.rs
sidecar/sidecar/src/agentic/tool/human/: error.rs  human.rs  mod.rs
sidecar/sidecar/src/agentic/tool/kw_search/: tool.rs
sidecar/sidecar/src/agentic/tool/lsp/: diagnostics.rs  grep_symbol.rs  open_file.rs
sidecar/sidecar/src/agentic/tool/mcp/: integration_tool.rs
sidecar/sidecar/src/agentic/tool/plan/: generator.rs  service.rs
sidecar/sidecar/src/agentic/tool/ref_filter/: mod.rs  ref_filter.rs
sidecar/sidecar/src/agentic/tool/repo_map/: generator.rs
sidecar/sidecar/src/agentic/tool/rerank/: base.rs
sidecar/sidecar/src/agentic/tool/reward/: client.rs
sidecar/sidecar/src/agentic/tool/search/: iterative.rs  relevant_files.rs
sidecar/sidecar/src/agentic/tool/session/: ask_followup_question.rs  service.rs
sidecar/sidecar/src/agentic/tool/test_runner/: runner.rs
sidecar/sidecar/src/agentic/tool/thinking/: thinking.rs
sidecar/sidecar/src/application/: mod.rs
sidecar/sidecar/src/application/logging/: mod.rs
sidecar/sidecar/src/chunking/: editor_parsing.rs  file_content.rs  javascript.rs  scope_graph.rs
sidecar/sidecar/src/inline_completion/context/: mod.rs  tree_sitter_cache.rs  types.rs
sidecar/sidecar/src/inline_completion/document/: content.rs
sidecar/sidecar/src/inline_completion/multiline/: detect_multiline.rs
sidecar/sidecar/src/mcts/: mod.rs
sidecar/sidecar/src/mcts/agent_settings/: settings.rs
sidecar/sidecar/src/mcts/execution/: error.rs  mod.rs
sidecar/sidecar/src/mcts/selector/: mod.rs  uct_score.rs
sidecar/sidecar/src/mcts/value_function/: error.rs
sidecar/sidecar/src/repo/: filesystem.rs  iterator.rs  state.rs  types.rs
sidecar/sidecar/src/repomap/: tag.rs  types.rs
sidecar/sidecar/src/reporting/posthog/: client.rs
sidecar/sidecar/src/tree_printer/: tree.rs
sidecar/sidecar/src/user_context/: types.rs
sidecar/sidecar/src/webserver/: agent_stream.rs  agentic.rs  inline_completion.rs  types.rs
sidecar/vllm/: deployment.sh
(+243 files in other folders)
