[package]
name = "logging"
version = "0.1.0"
edition = "2021"

[features]
tee_requests = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
anyhow = "1.0.75"
reqwest = "0.12.12"
thiserror = "1.0.49"
serde_json = "1.0.117"
serde = { version = "1.0.188", features = ["derive"] }
chrono = "0.4.38"
tokio = "1.32.0"
reqwest-middleware = { version = "0.4.0", features = ["json"] }
http = "1.2.0"
